--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -27,4 +27,6 @@
 <div id="navbar">
     <a href="/">Home</a>
     <a href="/posts">Posts</a>
+    <a href="/stats">Statistics</a>
+    <a href="{{ site.github_url }}">Github</a>
 </div>
