--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -26,7 +26,7 @@
 
 <div id="navbar">
     <a href="/">Home</a>
-    <a href="/posts">Posts</a>
-    <a href="/stats">Statistics</a>
+    <a href="{% link posts.md %}">Posts</a>
+    <a href="{% link stats.html %}">Statistics</a>
     <a href="{{ site.github_url }}">Github</a>
 </div>
