--- a/_layouts/raw.html
+++ b/_layouts/raw.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/css/style.css">
     <title>{{ page.title }}</title>
+    <!-- Dark mode is only supported on our custom pages so we only add the script to pages using the raw layout-->
+    <script src="/scripts/darkmode.js" defer></script>
 </head>
 <body>
 
