--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,15 +4,21 @@
         min-height: 50px;
         display: flex;
         align-items: center;
-        margin: 10px 20px;
-        padding-left: 7px;
+        margin: 0.7rem 1.4rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
+        border-radius: 7px;
+        gap: 1rem;
+        /*
+        Need opinion on this:
+        position: fixed
+        */
     }
+
     #navbar > a {
         border-radius: 10px;
         background: brown;
-        padding: 5px 10px;
-        margin-right: 10px;
-        margin-left: 10px;
+        padding: 0.25rem 0.7rem;
     }
 
     #navbar > a:hover {
@@ -25,6 +31,11 @@
 
     #navbar > a:visited {
         color: #c8c4bd;
+    }
+
+    #modeswitcher {
+        height: 42px;
+        margin-left: auto;
     }
 </style>
 
